[tool.poetry]
name = "async-realtime-batching"
version = "0.1.0"
description = ""
authors = ["John McCain <johnm.freestate@gmail.com>"]
packages = [
    { include = "async_realtime_batching" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"
pytest = "<8"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-paths = ["tests"]
ignore-patterns = ["^test_.*\\.py$"]

[tool.pylint.design]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-many-instance-attributes",
]
